# xptool

./: .gitignore  AGENT.md  AGENTS.md  TASKS.md  config.example.json  pyproject.toml
docs/: ARCHITECTURE.md  CONTROL_PLANE.md  IP_PROTECTION_COMPONENT_MAP.md  IP_PROTECTION_ROADMAP.md  IP_PROTECTION_SCOPE.md  IP_PROTECTION_SENSITIVITY_INVENTORY.md  IP_PROTECTION_THIN_CLIENT_CONTRACT.md  KPI_DASHBOARD_SPEC.md  LOGGING_TELEMETRY_POLICY.md  NATIVE_CLIENT_CUTOVER_RUNBOOK.md  NATIVE_CLIENT_MIGRATION_PLAN.md  NATIVE_CLIENT_PHASE100_INTERACTION_SESSION_MACRO_PASS_M_SIGNOFF_PLAN.md  NATIVE_CLIENT_PHASE103_INTERACTION_SESSION_RUNTIME_BUNDLE_FACTORY_INPUTS_EXTRACTION_PLAN.md  NATIVE_CLIENT_PHASE10_HARDENING_PLAN.md  NATIVE_CLIENT_PHASE110_INTERACTION_SESSION_MACRO_PASS_O_SIGNOFF_PLAN.md  NATIVE_CLIENT_PHASE117_INTERACTION_SESSION_FACTORY_WIRING_CONSOLIDATION_P_PLAN.md  NATIVE_CLIENT_PHASE118_INTERACTION_SESSION_MACRO_PASS_P_SIGNOFF_PLAN.md  NATIVE_CLIENT_PHASE120_INTERACTION_SESSION_FACTORY_RUNTIME_BUNDLE_TYPED_ENTRY_EXTRACTION_PLAN.md  NATIVE_CLIENT_PHASE126_INTERACTION_SESSION_MACRO_PASS_R_SIGNOFF_PLAN.md  NATIVE_CLIENT_PHASE128_INTERACTION_SESSION_FACTORY_RUNTIME_BUNDLE_FACTORY_TYPED_ENTRY_EXTRACTION_PLAN.md  NATIVE_CLIENT_PHASE12_NATIVE_DEFAULT_PLAN.md  NATIVE_CLIENT_PHASE13_EXECUTOR_DECOMPOSITION_PLAN.md  (+79 more)
native-bridge/: CMakeLists.txt  README.md
native-bridge/include/xptool/bridge/: bridge_service.hpp  command_envelope_validator.hpp  command_policy.hpp  telemetry_event.hpp
native-bridge/src/: bridge_service.cpp  command_envelope_validator.cpp  command_policy.cpp  main.cpp  telemetry_event.cpp
native-core/: CMakeLists.txt  README.md
native-core/include/xptool/core/: activity_step_result.hpp  banking_runtime.hpp  combat_runtime.hpp  fishing_runtime.hpp  mining_runtime.hpp  motor_runtime.hpp  repeat_target_selector.hpp  runtime_coordinator.hpp  runtime_gate.hpp  runtime_intent.hpp  runtime_runner.hpp  runtime_telemetry.hpp  state_acquisition_service.hpp  state_frame.hpp  state_snapshot.hpp  state_snapshot_translator.hpp  woodcutting_runtime.hpp  woodcutting_target.hpp  woodcutting_target_selector.hpp
native-core/parity/: activity_baseline_v1.csv  woodcutting_baseline_v1.csv
native-core/src/activities/: activity_parity_main.cpp
native-core/src/activities/banking/: banking_runtime.cpp
native-core/src/activities/combat/: combat_runtime.cpp
native-core/src/activities/fishing/: fishing_runtime.cpp
native-core/src/activities/mining/: mining_runtime.cpp
native-core/src/activities/woodcutting/: woodcutting_parity_main.cpp  woodcutting_runtime.cpp  woodcutting_target_selector.cpp
native-core/src/motor/: motor_runtime.cpp
native-core/src/runtime_core/: repeat_target_selector.cpp  runtime_coordinator.cpp  runtime_gate.cpp  runtime_runner.cpp  runtime_smoke_main.cpp  runtime_telemetry.cpp
native-core/src/state/: state_acquisition_service.cpp  state_acquisition_smoke_main.cpp  state_snapshot.cpp  state_snapshot_translator.cpp
native-ui/: CMakeLists.txt  README.md
native-ui/config/: default_ui_config.cfg  mining_focus.cfg
native-ui/include/xptool/ui/: status_overlay.hpp  telemetry_parser.hpp  ui_config.hpp
native-ui/src/: main.cpp  status_overlay.cpp  telemetry_parser.cpp  ui_config.cpp
(+938 files in other folders)
